force-app/main/default/objects/ServiceNow_Settings__c/ServiceNow_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ServiceNow Settings</label>
</CustomObject>