force-app/main/default/objects/ServiceNow_Settings__c/fields/LastCallOffSynchronizationTime__c.field-meta.xml
<CustomField>
    <fullName>LastCallOffSynchronizationTime__c</fullName>
    <label>Last CallOff Synchronization Time</label>
    <type>DateTime</type>
</CustomField>