force-app/main/default/objects/ServiceNow_Settings__c/fields/LastContractsSynchronization__c.field-meta.xml
<CustomField>
    <fullName>LastContractsSynchronization__c</fullName>
    <label>Last Contracts Synchronization</label>
    <type>DateTime</type>
</CustomField>