force-app/main/default/objects/ServiceNow_Settings__c/fields/LastSynchronizationTime__c.field-meta.xml
<CustomField>
    <fullName>LastSynchronizationTime__c</fullName>
    <label>LastSynchronizationTime</label>
    <type>Date</type>
</CustomField>